styles/style.css
/* ... */
@media screen and (max-width: 768px) {
    .column_50 {
        width: 96%;
        text-align: center;
        float: left;
        margin: 15px 2%;
    }
    .soundDiv .left_part {
        left: -100%;
        position: absolute;
        border-right: 0px;
        min-height: inherit;
        z-index: 9;
        box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
        border-radius: 0 6px 6px 0;
        padding: 5px;
        min-width: 300px;

    }
    .left_menu{
        display:block;
    }
    .w_70{
        width: 100%;
        margin-left: 0;
    }
    .main_wrapper .soundDiv .content{
        /*padding: 6px 6px;*/
    }
    .accordion_content{
        padding: 8px 9px;
    }
    .row._row{
        display: table;
        width: 537px;
    }
    .row._row .box{
        float: left;
        margin: 9px !important;
        /*width: 250px !important;*/
        width: 241px !important;
    }

}
@media screen and (min-width: 769px) and (max-width: 928px) {
    .column_50 {
        width: 96%;
    }
    .container {
        min-width: inherit;
    }
    .row._row{
        display: table;
        width: 537px;
    }
    .row._row .box{
        float: left;
        margin: 9px !important;
        width: 250px !important;
    }
}
@media screen and (max-width: 600px) {
    .row._row{
        display: table;
        width: 90%;
    }
    .row._row .box{
        float: left;
        margin: 5px 0 0 0 !important;
        width: 100% !important;
    }
}

@media only screen
and (min-device-width : 768px)
and (max-device-width : 1024px)
and (orientation : landscape) {
    .oddoneOut .odd_Button{
        /*height: 110px !important;
        width: 110px !important;*/
        font-size: 16px;
    }
    .img_feedback_spell{
        top: -3% !important;
    }
    .sentanceC{
        padding: 20px 35px 16px 0 !important;
    }
    .ul_cls_oddOut{
        /*width: 90%;*/
    }
}
@media only screen
and (min-device-width : 768px)
and (max-device-width : 1024px)
and (orientation : portrait) {
    .left_part{
        float: left;
        left: 0;
        position: relative;
        min-width: 300px;
        z-index: 9;
        border-radius: 10px 10px;
        padding: 5px;
    }
    .right_part{
        min-height: 100%;
        position: absolute;
        width: 100%;
        padding: 5px;
    }
    .oddoneOut .odd_Button{
        /*height: 110px !important;
        width: 110px !important;*/
        font-size: 16px;
    }

    .img_feedback_spell{
        top: -3% !important;
    }
    .sentanceC{
        padding: 20px 35px 16px 0 !important;
    }
}
@media screen and (max-width : 530px){
    .models_page_right_panel{
        margin-right:0;
    }

    .down_arrow_wrapper{
        right: -2px;
        top: 31px;
    }
    .rotateLi {
        max-width: 292px;
        margin-left: -146px;
    }

    .rotateLi li.clear_true {
        clear:none;
    }
    .front {
        width: 70px;
        background-size: 100% auto;
    }
    .rotateLi li {
        width: 71px;
        height: 103px;
    }
    .flip-container, .front, .back {
        height: 103px;
    }

}
@media screen and (max-width : 480px){
    .models_page_right_panel{
        margin-right:0;
    }

    .down_arrow_wrapper{
        right: -2px;
        top: 31px;
    }
    .simSound div.dtop_title, .simSound div.droppable {
        /*width: 131px;*/
    }
}
@media screen and (max-width : 320px){
    .models_page_right_panel{
        margin-right:0;
    }

    .down_arrow_wrapper{
        right: -2px;
        top: 31px;
    }
}
@media screen and (max-width : 900px){
    .left_part{
        position: absolute;
        min-width: 300px;
        width: 90%;
        z-index: 9;
        border-radius: 7px 7px 0 0;
        padding: 0;
        background-color: #f7f7f7;
        min-height: 0;
        /*overflow: hidden;*/
        padding: 5px;
        border-bottom: 1px solid #d2d5db;
        box-shadow: 0 4px 4px grey;
        padding-bottom: 10px;
    }
    .left_part_exam.left_part_exam{
        min-width: 300px;
        width: 100%;
    }
    .left_part_m{
        position: relative !important;
    }
    .left_part.left_part _ep{
        width: 100% !important;
        margin: 0 !important;
        padding: 0 !important;
        border: none;
        box-shadow: none;
        background-color: #ffffff !important;
    }
    .task_list_ul{
        margin: 7px;
    }
    .right_part_m{
        position: absolute !important;
    }
    .right_part{
        padding: 10px;
        position: relative;
        width: 100%;
    }
    .models_page_down_arrow {
        height: 30px;
        width: 20px;
        background: url(../images/mobile_menu_ico.png) no-repeat;
        border: none;
        margin-top: 12px;
    }
    .down_arrow_wrapper{
        right: -3px;
        top: 31px;
    }
    .left_menu{
        display: block;
    }
    .up_arrow{
        display: block;
        margin: 10px 10px 0;
    }
    .titleContainer h1{
        padding:12px 12px 12px 5px;
        font-size: 16px;
    }
    .column_50{
        margin: 5px 2%;
    }
    .div1{
        width: 100%;
    }
    .div2{
        width: 100%;
    }

}
@media screen and (min-width: 929px) and (max-width: 1219px) {
    /*.home_page .box h2{min-height: 60px;}*/

}
/* ... */

